# P2A6_Textstatistik

./: CMakeLists.txt  buergschaft.txt  glocke.txt  main.cpp  textstatistik.cpp  textstatistik.h
